--- a/screens/lista_cliente.html
+++ b/screens/lista_cliente.html
@@ -53,7 +53,7 @@
           </tr>
         </thead>
         <tbody data-table>
-          <tr>
+          <!-- <tr>
             <td class="td" data-td>Gabriela</td>
             <td>gabriela@alura.com</td>
             <td>
@@ -75,7 +75,7 @@
                 </li>
               </ul>
             </td>
-          </tr>
+          </tr>-->
         </tbody>
       </table>
       <div class="modal-container modal--close">
@@ -92,6 +92,6 @@
         </article>
       </div>
     </main>
-    <script src="../service/client-service.js"></script>
+    <script type="module" src="../controllers/client_controllers.js"></script>
   </body>
 </html>
