--- a/screens/registrar_cliente.html
+++ b/screens/registrar_cliente.html
@@ -49,7 +49,7 @@
               class="input"
               type="text"
               placeholder="Nombre"
-              required
+              
               data-nombre
             />
             <label class="input-label" for="nombre">Nombre</label>
@@ -62,7 +62,7 @@
               class="input"
               type="text"
               placeholder="email"
-              required
+              
               data-email
             />
             <label class="input-label" for="email">Email</label>
@@ -72,5 +72,7 @@
         </form>
       </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2-beta.0/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module"  src="../controllers/registro_controller.js"></script>
   </body>
 </html>
