--- a/screens/editar_cliente.html
+++ b/screens/editar_cliente.html
@@ -72,5 +72,6 @@
         </form>
       </section>
     </main>
+    <script type="module" src="../controllers/actualizar_controllers.js"></script>
   </body>
 </html>
